Optimize mvc architecture Add redis as cache

--- a/conf/app.ini
+++ b/conf/app.ini
@@ -30,3 +30,10 @@ Password = root857631
 Host = 47.98.246.49:3306
 Name = blog
 TablePrefix = blog_
+
+[redis]
+Host = 47.98.246.49:6379
+Password = 857631
+MaxIdle = 30
+MaxActive = 30
+IdleTimeout = 200
