--- a/conf/app.ini
+++ b/conf/app.ini
@@ -25,15 +25,15 @@ WriteTimeout = 60
 
 [database]
 Type = mysql
-User = root
-Password = root857631
-Host = 47.98.246.49:3306
+User = YourAccount
+Password = YourIp
+Host = YourIp:3306
 Name = blog
 TablePrefix = blog_
 
 [redis]
-Host = 47.98.246.49:6379
-Password = 857631
+Host = YourIP:6379
+Password = YourPassword
 MaxIdle = 30
 MaxActive = 30
 IdleTimeout = 200
